layout bug fixes

--- a/src/styles/layouts/_base.scss
+++ b/src/styles/layouts/_base.scss
@@ -1,4 +1,5 @@
 @use "@/styles/semantic" as *;
+@use "@/styles/primitives" as *;
 @use "@/styles/abstracts/mixins" as *;
 
 
@@ -21,14 +22,19 @@
     box-sizing: inherit;
 }
 
+html,
 body {
     margin: 0;
-    height: 100vh;
+    min-height: 100vh;
+    width: 100vw;
+    overflow-x: hidden; // prevents scaling down on mobile
+}
+
+body {
     // height: 100svh;
     color: $body-color;
     font-family: $body-font;
     background: $body-background-color;
-    overflow: hidden;
 }
 
 figure {
@@ -45,12 +51,14 @@ main {
 }
 
 table {
+    display: block;
+    width: max-content;
     border-collapse: collapse;
     border: 1px solid $clr-zebra;
+    overflow-x: auto;
 
     thead {
         th {
-
             background-color: $clr-primary;
             @include padding-box;
         }
@@ -61,8 +69,10 @@ table {
             @include padding-box;
         }
 
-        tr:nth-child(even) {
-            background-color: $clr-zebra;
+        tr {
+            &:nth-child(even) {
+                background-color: $clr-zebra;
+            }
         }
     }
 }
